# DSP_ver2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ENVIRONMENT_SETUP.md  rearrangePlan.md  target.md
AI_manage_area/AI_Memory/: 01_Environment_and_CMake_Guide.md  02_DSP_Architecture_and_Strategy.md  03_Roadmap.md  Bug_List.md  CMake_Survival_Guide.md  DSP_Architecture_Guidelines.md  Dev_Environment_Setup.md  Header_vs_Cpp_Strategy.md  VS_Directory_Strategy.md
AI_manage_area/learning_logs/: 2026_01_28.md
CPP/DSP_Lab/: DSP_Lab.sln
CPP/DSP_Lab/DSP_Lab/: DSP_Lab.cpp  DSP_Lab.vcxproj  DSP_Lab.vcxproj.filters
CPP_learning/: Learning_Path.md
experiments/console_tests/: test_any_name.cpp
learning_cmake/: CMakeLists.txt  main.cpp
logs/: 2026_01_26.md  2026_02_05.md  2026_02_10.md  2026_02_11.md  2026_02_12.md
modules/level0_dsp_core/: constant.h  interpolation.h  ringBuffer.h  smoother.h
modules/level1_dsp_building_blocks/: delay_comb_allpass.h  envelope.h  filter.h  oscillator.h
modules/level2_dsp_effects/: flanger_phaseEffect.h  reverb_fromCombAllpass.h
modules/other_modules/: SimpleWavIO.cpp  SimpleWavIO.h
reference_doc/: Audio_EQ_Cookbook.md  CCRMA_JOS.md  SignalSmith_Audio.md  WolfsoundJuceCourse.md  theWolfSoundDotCom.md
